Clean up UI for date selection on mobile

--- a/src/components/BilingualSchedule.astro
+++ b/src/components/BilingualSchedule.astro
@@ -934,6 +934,13 @@ const getLocalizedText = (key: string): string => {
       width: auto;
       padding-top: 24px;
     }
+    .date-outerwrap > .date-wrapper {
+    border-radius: 6px;
+    overflow: hidden;
+  }
+  .date-wrapper > .single-filter {
+    border-radius: 0px;
+  }
   }
 </style>
 
