update workshop speakers

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -170,7 +170,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png"
       },
       {
         title: "Flutter Meetup",
-        text: "Build beautiful, natively compiled applications for mobile, web, and desktop from a single codebase.",
+        text: "Learn about Flutter and Nest: a toolkit for extending Flutter’s engine and framework without fracturing the ecosystem.",
       },
       {
         title: "Chitu First Meetup",
@@ -186,7 +186,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png"
       },
       {
         title: "Makepad Workshop",
-        text: "Learn to build fast, native-feeling UIs in Rust for web and desktop applications with Makepad.",
+        text: "Learn how to build fast, cross-platform UIs step-by-step in Rust using Makepad and add AI capabilities with MolyKit.",
       },
       {
         title: "Embedded Rust x AI Workshop",
