updated "(The event has ended, thanks for attending)", added Speaker slides download page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,10 +42,6 @@ const links = [
         text: "Seeed Embodied AI Hackathon",
         link: "https://lu.ma/7djaix39",
       },
-      {
-        text: "Speakers Culture Tour",
-        link: "/speakers-culture-tour/",
-      },
     ],
   },
   {
@@ -86,7 +82,7 @@ const slug = Astro.url.pathname;
 
   <div class="floating-ticket-button">
     <Button
-      text="Get Tickets"
+      text="Event ended, thanks for attending"
       link="https://www.eventbrite.com/e/gosim-ai-paris-tickets-1265928669729?aff=oddtdtcreator"
       openInNewTab
       class="btn primary btn-floating btn-hover"
@@ -147,7 +143,7 @@ const slug = Astro.url.pathname;
       </nav>
       <div class="box-row box-row-btn">
         <Button
-          text="Get Tickets"
+          text="Event ended, thanks for attending"
           link="https://www.eventbrite.com/e/gosim-ai-paris-tickets-1265928669729?aff=oddtdtcreator"
           openInNewTab
           class="btn primary xl btn-hover"
@@ -237,7 +233,7 @@ const slug = Astro.url.pathname;
 
       <div>
         <Button
-          text="Get Tickets"
+          text="Event ended, thanks for attending"
           link="https://www.eventbrite.com/e/gosim-ai-paris-tickets-1265928669729?aff=oddtdtcreator"
           openInNewTab
           class="btn outline btn-hover"
