--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -23,9 +23,9 @@ const links = [
     text: "Sponsors",
     link: "/sponsors",
   },
-  {
-    text: "Spotlight",
-    link: "/#spotlight",
+    {
+    text: "Speaker Slides",
+    link: "/speaker-slides",
   },
   {
     text: "Co-located Events",
@@ -56,8 +56,8 @@ const links = [
         openInNewTab: false,
       },
       {
-        text: "Speakers Cultural Day Tour",
-        link: "/speakers-culture-tour/",
+        text: "Spotlight",
+        link: "/#spotlight",
         openInNewTab: false,
       },
     ],
@@ -110,8 +110,8 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`
 
   <div class="floating-ticket-button">
     <Button
-      text="Get Tickets"
-      link="/tickets"
+      text="Event ended, thanks for attending"
+      link=""
       class="btn primary btn-floating btn-hover"
     />
   </div>
@@ -182,8 +182,8 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`
       </nav>
       <div class="box-row box-row-btn">
         <Button
-          text="Get Tickets"
-          link="/tickets"
+          text="Event ended, thanks for attending"
+          link=""
           class="btn primary xl btn-hover"
         />
       </div>
@@ -309,8 +309,8 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`
           </div>
         </div>
         <Button
-          text="Get Tickets"
-          link="/tickets"
+          text="Event ended, thanks for attending"
+          link=""
           class="btn outline btn-hover"
         />
       </div>
