--- a/src/components/HeaderLandingZh.astro
+++ b/src/components/HeaderLandingZh.astro
@@ -23,9 +23,9 @@ const links = [
     text: "赞助商",
     link: "/zh/sponsors",
   },
-  {
-    text: "Spotlight",
-    link: "/zh/#spotlight",
+    {
+    text: "讲师 PPT",
+    link: "/speaker-slides",
   },
   {
     text: "同期活动",
@@ -56,8 +56,8 @@ const links = [
         openInNewTab: false,
       },
       {
-        text: "讲师嘉宾文化一日游",
-        link: "/zh/speakers-culture-tour/",
+        text: "Spotlight",
+        link: "/zh/#spotlight",
         openInNewTab: false,
       },
     ],
@@ -98,8 +98,8 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`;
 
   <div class="floating-ticket-button">
     <Button
-      text="获取门票"
-      link="/zh/tickets"
+      text="活动已结束，感谢参与"
+      link=""
       class="btn primary btn-floating btn-hover"
     />
   </div>
@@ -170,8 +170,8 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`;
       </nav>
       <div class="box-row box-row-btn">
         <Button
-          text="获取门票"
-          link="/zh/tickets"
+          text="活动已结束，感谢参与"
+          link=""
           class="btn primary xl btn-hover"
         />
       </div>
@@ -297,8 +297,8 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`;
           </div>
         </div>
         <Button
-          text="获取门票"
-          link="/zh/tickets"
+          text="活动已结束，感谢参与"
+          link=""
           class="btn outline btn-hover"
         />
       </div>
