--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png"
     location="Hangzhou, China"
     links={[
       {
-        text: "Get Tickets",
-        link: "/tickets",
+        text: "Event ended, thanks for attending",
+        link: "",
         openInNewTab: false,
       },
     ]}
@@ -416,8 +416,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png"
     date="September 13-14, 2025"
     text="Secure your spot today at GOSIM Hangzhou 2025. Collaborate with innovators, engage with industry pioneers, and be part of shaping the future of open-source technology."
     ctaButton={{
-      text: "Get tickets",
-      link: "/tickets",
+      text: "Event ended, thanks for attending",
+      link: "",
       openInNewTab: false,
     }}
   />
