--- a/src/pages/venue.astro
+++ b/src/pages/venue.astro
@@ -24,8 +24,8 @@ import LocationConnectivity from "components/LocationConnectivity.astro";
     date="September 13-14, 2025"
     text="Secure your spot today at GOSIM Hangzhou 2025. Collaborate with innovators, engage with industry pioneers, and be part of shaping the future of open-source technology."
     ctaButton={{
-      text: "Get tickets",
-      link: "/tickets",
+      text: "Event ended, thanks for attending",
+      link: "",
       openInNewTab: false,
     }}
   />
