--- a/src/pages/zh/index.astro
+++ b/src/pages/zh/index.astro
@@ -42,8 +42,8 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     location="浙江 杭州"
     links={[
       {
-        text: "获取门票",
-        link: "/zh/tickets",
+        text: "活动已结束，感谢参与",
+        link: "",
         openInNewTab: false,
       },
     ]}
@@ -412,7 +412,7 @@ import GosimParis from "images/homepage/gosim-paris-min.png";
     text="立即确保您在GOSIM Hangzhou 2025的席位。与创新者合作，与行业先驱交流，成为塑造开源技术未来的一部分。"
     ctaButton={{
       text: "立即购票",
-      link: "/zh/tickets",
+      link: "",
       openInNewTab: false,
     }}
   />
