--- a/src/pages/zh/schedule.astro
+++ b/src/pages/zh/schedule.astro
@@ -22,8 +22,8 @@ import BilingualSchedule from "components/BilingualSchedule.astro";
     date="2025年9月13-14日"
     text="立即预订您在GOSIM杭州2025的席位。与创新者协作，与行业先锋交流，参与塑造开源技术的未来。"
     ctaButton={{
-      text: "获取门票",
-      link: "/tickets",
+      text: "活动已结束，感谢参与",
+      link: "",
       openInNewTab: false,
     }}
   />
