--- a/src/pages/zh/venue.astro
+++ b/src/pages/zh/venue.astro
@@ -22,8 +22,8 @@ import GetTickets from "components/GetTickets.astro";
     date="2025年9月13-14日"
     text="立即预定您在 GOSIM Hangzhou 2025 的席位。与创新者合作，与行业先驱交流，并成为塑造开源技术未来的一部分。"
     ctaButton={{
-      text: "获取门票",
-      link: "/tickets",
+      text: "活动已结束，感谢参与",
+      link: "",
       openInNewTab: false,
     }}
   />
