--- a/src/pages/zh/workshops/index.astro
+++ b/src/pages/zh/workshops/index.astro
@@ -26,8 +26,8 @@ import AllWorkshops from "components/WorkshopsZh.astro";
     date="2025年9月13-14日"
     text="立即确保您在 GOSIM Hangzhou 2025 的席位。与创新者合作，与行业先驱互动，成为塑造开源技术未来的一部分。"
     ctaButton={{
-      text: "Get tickets",
-      link: "/tickets",
+      text: "Event ended, thanks for attending",
+      link: "",
       openInNewTab: false,
     }}
   />
