--- a/src/pages-waiting/index-original.astro
+++ b/src/pages-waiting/index-original.astro
@@ -272,7 +272,7 @@ import GosimBeijing from "images/homepage/gosim-beijing.png";
     date="May 6-7, 2025"
     text="Paris, the City of Light, transforms into the City of Artificial Brilliance this May. GOSIM AI 2025 invites visionaries, disruptors, and pioneers to converge at Station F, a crucible of innovation — to shape the next frontier of AI."
     ctaButton={{
-      text: "Get tickets",
+      text: "Event ended, thanks for attending",
       link: "https://www.eventbrite.com/e/gosim-ai-paris-tickets-1265928669729?aff=oddtdtcreator",
       openInNewTab: true,
     }}
