--- a/src/pages/schedule-day-2.astro
+++ b/src/pages/schedule-day-2.astro
@@ -22,8 +22,8 @@ import BilingualSchedule from "components/BilingualSchedule.astro";
     date="September 13-14, 2025"
     text="Secure your spot today at GOSIM Hangzhou 2025. Collaborate with innovators, engage with industry pioneers, and be part of shaping the future of open-source technology."
     ctaButton={{
-      text: "Get tickets",
-      link: "/tickets",
+      text: "Event ended, thanks for attending",
+      link: "",
       openInNewTab: false,
     }}
   />
