--- a/src/pages/workshops/index.astro
+++ b/src/pages/workshops/index.astro
@@ -26,8 +26,8 @@ import AllWorkshops from "components/Workshops.astro";
     date="September 13-14, 2025"
     text="Secure your spot today at GOSIM Hangzhou 2025. Collaborate with innovators, engage with industry pioneers, and be part of shaping the future of open-source technology."
     ctaButton={{
-      text: "Get tickets",
-      link: "/tickets",
+      text: "Event ended, thanks for attending",
+      link: "",
       openInNewTab: false,
     }}
   />
