--- a/src/pages/zh/schedule-day-2.astro
+++ b/src/pages/zh/schedule-day-2.astro
@@ -22,8 +22,8 @@ import BilingualSchedule from "components/BilingualSchedule.astro";
     date="2025年9月13-14日"
     text="立即确保您在GOSIM Hangzhou 2025的席位。与创新者合作，与行业先驱交流，成为塑造开源技术未来的一部分。"
     ctaButton={{
-      text: "获取门票",
-      link: "/zh/tickets",
+      text: "活动已结束，感谢参与",
+      link: "",
       openInNewTab: false,
     }}
   />
