shorten button text

--- a/src/components/HeaderLanding.astro
+++ b/src/components/HeaderLanding.astro
@@ -63,7 +63,7 @@ const links = [
     ],
   },
   {
-    text: "Venue, Travel, & PPT Template",
+    text: "Resources",
     subLinks: [
       {
         text: "Venue",
@@ -110,7 +110,7 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`
 
   <div class="floating-ticket-button">
     <Button
-      text="Event ended, thanks for attending"
+      text="Thank You"
       link=""
       class="btn primary btn-floating btn-hover"
     />
@@ -182,7 +182,7 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`
       </nav>
       <div class="box-row box-row-btn">
         <Button
-          text="Event ended, thanks for attending"
+          text="Thank You"
           link=""
           class="btn primary xl btn-hover"
         />
@@ -309,7 +309,7 @@ const switchPath = isZhPath ? slug.replace("/zh/", "/") : `/zh${slug}`
           </div>
         </div>
         <Button
-          text="Event ended, thanks for attending"
+          text="Thank You"
           link=""
           class="btn outline btn-hover"
         />
