--- a/src/components/GetTickets.astro
+++ b/src/components/GetTickets.astro
@@ -1,28 +1,28 @@
 ---
 // Packages
-import { Picture } from "astro:assets";
+import { Picture } from "astro:assets"
 
 // Components
-import Button from "components/Button.astro";
+import Button from "components/Button.astro"
 
 // Images
-import image from "videos/hz-hero-bk.png";
+import image from "videos/hz-hero-bk.png"
 
 interface Props {
-  title: string;
-  location: string;
-  date: string;
-  text: string;
+  title: string
+  location: string
+  date: string
+  text: string
   ctaButton?: {
-    text: string;
-    link: string;
-    openInNewTab?: boolean;
-  };
+    text: string
+    link: string
+    openInNewTab?: boolean
+  }
 }
 
-const { title, location, date, text, ctaButton } = Astro.props;
+const { title, location, date, text, ctaButton } = Astro.props
 
-const slug = Astro.url.pathname;
+const slug = Astro.url.pathname
 ---
 
 <section
@@ -77,12 +77,13 @@ const slug = Astro.url.pathname;
           <p>{text}</p>
         </div>
 
+        // temporary override
         {
           ctaButton?.text && (
             <div class="col-row col-row-btn">
               <Button
                 link={ctaButton.link}
-                text={ctaButton.text}
+                text="Thank You"
                 openInNewTab={ctaButton?.openInNewTab}
                 class="btn primary xl btn-hover"
               />
